Allowed multiple test files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,21 +28,25 @@ set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
 
+file(GLOB_RECURSE TESTS_FILES
+    "tests/**.cc"
+)
+
 enable_testing()
 
 # testing
 add_executable(
-  hello_test
-  tests/hello_test.cc
+  tests
+  ${TESTS_FILES}
 )
 # link google test to the executable
 target_link_libraries(
-  hello_test
+  tests
   gtest_main
 )
 
 include(GoogleTest)
-gtest_discover_tests(hello_test)
+gtest_discover_tests(tests)
 
 
 # main program part
@@ -60,6 +64,7 @@ list(REMOVE_ITEM SRC_FILES ${SRC_MAIN})
 file(GLOB_RECURSE HEADER_FILES
     "src/**.h"
 )
+
 
 # Allow include to use paths relative to projct root
 include_directories(${PROJECT_SOURCE_DIR})
