Resolutoion pb tests unitaires

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,3 +79,4 @@ MESSAGE(STATUS "Include dirs ${OpenCV_INCLUDE_DIRS}")
 MESSAGE(STATUS "LINK LIBRARIES ${OpenCV_LIBS}")
 include_directories(${OpenCV_INCLUDE_DIRS})
 target_link_libraries(jpeg ${OpenCV_LIBS})
+target_link_libraries(tests ${OpenCV_LIBS})
